--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^1.11.0"
   },
   "devDependencies": {
+    "animated-scroll-to": "^1.0.1",
     "autoprefixer": "^6.7.7",
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.2.1",
@@ -37,6 +38,7 @@
     "eslint-plugin-prefer-object-spread": "^1.1.0",
     "eslint-plugin-react": "^6.10.3",
     "extract-text-webpack-plugin": "^2.1.0",
+    "lodash": "^4.17.4",
     "node-sass": "^4.5.1",
     "normalize-scss": "^6.0.0",
     "postcss-loader": "^1.3.3",
