--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "moment": "2.17.1",
     "node-sass": "4.5.0",
     "node-sass-middleware": "0.11.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "animated-scroll-to": "^1.0.1",
@@ -26,6 +27,7 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
     "breakpoint-sass": "^2.7.1",
+    "classnames": "^2.2.5",
     "concurrently": "^3.4.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.27.3",
@@ -42,6 +44,9 @@
     "node-sass": "^4.5.1",
     "normalize-scss": "^6.0.0",
     "postcss-loader": "^1.3.3",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "sass-loader": "^6.0.3",
     "webpack": "^2.4.1"
   },
